with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.22.1
=======================
[3017535] Allow user to edit the generated passwords (Manage->Generate Password)
before copying to the clipboard.
[3011546] "autotype" can now be added to the List View via the Column
Picker (right click on column labels).

Changes to Existing Features in 3.22.1
======================================
None

Bugs fixed in 3.22.1
====================
[3016803] No longer crashes when trying to view a base entry with
similarly named aliases.
[3013199] PasswordSafe no longer hangs when trying to read preferences
stored in registry by older versions.
[3011972] By adding more checking when creating the menus for Recent Entries
off the System Tray menu, prevent crashing when clicking on the icon.
[3010926] Can now set a non-recurring expiry date using the calendar during
Add/Edit.
[3010541, 3013981, 3011972] Fixed crash when locked and the user
right-clicks the System Tray icon.
[3009130] Changes to an entry's password policy are now saved upon OK or Apply.
[3008203] The password expiration date is now automatically updated when
a "recurring" password expiration is set and the password is changed.
[3006125] Selected entry/group before database is locked or minimized,
including when Windows goes into Standby/Hibernate is now re-selected when
the database is later displayed.
[3006069] Autotype now works correctly when the user specifies that
PasswordSafe should minimize after Autotype and has also set that the
database should be locked on minimize.
[2957038] Cursor no longer disappears when PasswordSafe thinks that the
user is dragging an entry but then doesn't.