@@ -98,7 +98,7 @@ public:
     MultipleInstances, ShowDragbar,
     ClearClipboardOnMinimize, ClearClipboardOnExit,
     ShowFindToolBarOnOpen, NotesWordWrap, LockDBOnIdleTimeout,
-    HighlightChanges,
+    HighlightChanges, HideSystemTray,
     NumBoolPrefs};
   enum IntPrefs {Column1Width, Column2Width, Column3Width, Column4Width,
     SortedColumn, PWDefaultLength, MaxMRUItems, IdleTimeout,
