@@ -294,39 +294,41 @@ BEGIN
     LTEXT           "minutes idle",IDC_STATIC,173,73,69,8
 END
 
-IDD_PS_SYSTEM DIALOGEX 0, 0, 240, 288
+IDD_PS_SYSTEM DIALOGEX 0, 0, 240, 309
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "System"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "SystemTray",IDC_STATIC,7,2,226,52
-    CONTROL         "Put icon in System Tray",IDC_DEFPWUSESYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,11,216,10
-    RTEXT           "Remember last",IDC_STATIC,13,25,53,8
-    EDITTEXT        IDC_MAXREITEMS,69,23,17,12,ES_NUMBER
-    CONTROL         "",IDC_RESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,86,23,10,12
-    LTEXT           "used entries in System Tray menu.",IDC_STATIC_MAXREITEMS,99,25,124,15
-    GROUPBOX        "Recent PasswordSafe Databases",IDC_STATIC_GBMRU,7,58,226,64,WS_GROUP
-    LTEXT           "(Requires a restart of PasswordSafe to take effect.)",IDC_STATIC_RESTART,14,68,211,18
-    RTEXT           "Remember last",IDC_STATIC_REMLAST,13,88,53,8
-    EDITTEXT        IDC_MAXMRUITEMS,69,86,17,12,ES_NUMBER
-    CONTROL         "",IDC_MRUSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,86,86,10,12
-    LTEXT           "databases.",IDC_STATIC_MAXMRUITEMS,98,88,124,10
+    GROUPBOX        "SystemTray",IDC_STATIC,7,4,226,68
+    CONTROL         "Hide System Tray icon (Hot Key MUST be active)",IDC_DEFPWHIDESYSTRAY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,44,216,10
+    CONTROL         "Put icon in System Tray",IDC_DEFPWUSESYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,15,216,10
+    RTEXT           "Remember last",IDC_STATIC,13,29,53,8
+    EDITTEXT        IDC_MAXREITEMS,69,27,17,12,ES_NUMBER
+    CONTROL         "",IDC_RESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,86,27,10,12
+    LTEXT           "used entries in System Tray menu.",IDC_STATIC_MAXREITEMS,99,29,124,15
+    GROUPBOX        "Recent PasswordSafe Databases",IDC_STATIC_GBMRU,7,74,226,64,WS_GROUP
+    LTEXT           "(Requires a restart of PasswordSafe to take effect.)",IDC_STATIC_RESTART,14,84,211,18
+    RTEXT           "Remember last",IDC_STATIC_REMLAST,13,104,53,8
+    EDITTEXT        IDC_MAXMRUITEMS,69,102,17,12,ES_NUMBER
+    CONTROL         "",IDC_MRUSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,86,102,10,12
+    LTEXT           "databases.",IDC_STATIC_MAXMRUITEMS,98,104,124,10
     CONTROL         "Recent Databases on File Menu rather than as a sub-menu.",IDC_MRU_ONFILEMENU,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,101,216,19
-    GROUPBOX        "Configuration Information",IDC_CONFIG_GRP,7,160,226,71
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,117,216,19
+    GROUPBOX        "Configuration Information",IDC_CONFIG_GRP,7,176,226,71
     CONTROL         "Remove PasswordSafe configuration from Registry",IDC_REGDEL,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,170,216,15
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,186,216,15
     CONTROL         "Migrate PasswordSafe configuration to user directory",IDC_MIGRATETOAPPDATA,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,187,216,15
-    PUSHBUTTON      "Apply",IDC_APPLYCONFIGCHANGES,20,209,50,14,WS_DISABLED
-    CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,216,10
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,203,216,15
+    PUSHBUTTON      "Apply",IDC_APPLYCONFIGCHANGES,20,225,50,14,WS_DISABLED
+    CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,59,216,10
     CONTROL         "Open database read-only by default",IDC_DEFAULTOPENRO,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,128,217,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,144,217,10
     CONTROL         "Allow multiple instances (requires all instances to be restarted)",IDC_MULTIPLEINSTANCES,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,141,217,17
-    LTEXT           "Configuration File:",IDC_STATIC_CONFIGFILE,12,238,95,8
-    LTEXT           "Static",IDC_CONFIGFILE,12,255,223,18
-    LTEXT           "Static",IDC_STATIC_RWSTATUS,117,238,37,8
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,157,217,17
+    LTEXT           "Configuration File:",IDC_STATIC_CONFIGFILE,12,254,95,8
+    LTEXT           "Static",IDC_CONFIGFILE,12,271,223,18
+    LTEXT           "Static",IDC_STATIC_RWSTATUS,117,254,37,8
 END
 
 IDD_PS_DISPLAY DIALOGEX 0, 0, 240, 250
@@ -1555,7 +1557,7 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_PS_SYSTEM, DIALOG
     BEGIN
-        BOTTOMMARGIN, 273
+        BOTTOMMARGIN, 294
     END
 
     IDD_PS_PASSWORDPOLICY, DIALOG
