@@ -10,6 +10,9 @@ releases may be found in the file ChangeLog.txt.
 
 New Features for 3.22.1
 =======================
+[3022827] Implement 'stealth' mode where, as long as the user specifies both
+the use of the System Tray and a valid Hot Key, then the System Tray
+icon and the button on the Taskbar can be hidden.
 [3017535] Allow user to edit the generated passwords (Manage->Generate Password)
 before copying to the clipboard.
 [3011546] "autotype" can now be added to the List View via the Column
